--- a/Landing_3/scss/styles.scss
+++ b/Landing_3/scss/styles.scss
@@ -52,7 +52,6 @@ section{
         background-image: linear-gradient(90deg, #09052f 0%, #311d5e 100%);
         z-index: 0;
         opacity: 0.8;
-        
     }
 }
 .header > *{
@@ -138,9 +137,6 @@ nav{
             }
             &:active{
                 color: $themeColor;
-            }
-            &:link{
-                color: $themeColor;
             } 
         }
     }
@@ -184,7 +180,7 @@ nav{
 }
 /* Watch */
 .watch{
-    height: 70vh;
+    height: 50vh;
     background-position: center;
     background-size: cover;
     position: relative;
@@ -210,6 +206,13 @@ nav{
         };
         text-align: center;
         z-index: 1;
+    }
+    i{
+        text-align: center;
+        margin-bottom: 30px;
+        color: #fff;
+        z-index: 10;
+        font-size: 80px; 
     }
 }
 /*Expertise*/
@@ -275,7 +278,6 @@ nav{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 70vh;
     &::after{
         content: "";
         display: block;
@@ -358,8 +360,304 @@ nav{
         margin-bottom: 15px;
     }
 }
-
-
-
-
-
+/* Works */
+.works{
+    padding: 50px;
+}
+.works-wrapper{
+    @include font(14px, 1, 300);
+    display: flex;
+    justify-content: space-between;
+    h3{
+        @include font(22px, 1, 700);
+    }
+    a{
+        text-decoration: none;
+        color: #413d4b;
+        position: relative;
+        &:hover{
+            color: $themeColor;
+        }
+        &:active{
+            color: $themeColor;
+        }
+        i{
+            position: absolute;
+            margin-left: 10px;
+            top: -1px;
+        }
+    }
+}
+/*Employee*/
+.employee{
+    flex-wrap: wrap;
+    padding-top: 0;
+    img{
+        width: 16vw;
+    }
+    .link-button{
+        margin-top: 40px;
+        text-align: center;
+    }
+}
+/* Testimonials */
+.testimonials{
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    color: #fff;
+    &::after{
+        display: block;
+        content: "";
+        width: 100%;
+        height: 100%;
+        top: 0;
+        position: absolute;
+        background-image: linear-gradient(90deg, #09052f 0%, #311d5e 100%);
+        left: 0;
+        opacity: 0.8;
+        z-index: 0;
+    }
+    @include font(16px, 26px, 400);
+    h3{
+        @include font(100px, 1.571, 400);
+        font-family: "Playfair Display";
+    }
+    h5{
+        @include font(14px, 1.571, 900);
+    }
+    p{
+        margin-bottom: 50px;
+        opacity: 0.5;
+    }
+    img{
+        margin-right: 10px;
+    }
+    .testimonials-wrapper{
+        position: relative;
+        i{
+            &:first-child{
+                margin-left: -30px;
+            }
+            position: absolute;
+            top: 35px;
+            font-size: 30px;
+            opacity: 0.3;
+        }  
+    }
+}
+.testimonials > * {
+    z-index: 10;
+    position: relative;
+}
+/*Contact*/
+.contact{
+    padding: 65px;
+    h3{
+       @include font(22px, 1, 700); 
+       margin-bottom: 35px ;
+    }
+    
+}
+.contact-wrapper{
+    display: flex;
+    justify-content: space-between;
+}
+.contact__form{
+    display: flex;
+    flex-direction: column;
+    
+    margin-right: 40px;
+    form{
+        display: flex;
+        flex-direction: column;
+         @include font(22px, 1, 300){
+                color: #413d4b;
+            };
+        input[type=text], input[type=email]{
+           padding: 15px;
+           margin-bottom: 25px;
+           border: 1px solid rgba(0, 0, 0, 0.2);
+           &::placeholder{
+                opacity: 0.5;        
+            }
+        }
+        textarea{
+            &::placeholder{
+                padding: 15px;
+                @include font(22px, 1, 300){
+                    color: #413d4b;
+                };
+                opacity: 0.5;  
+            }
+        }
+        input[type=submit]{ 
+            background: none;
+            max-width: 120px;
+            @include font(16px, 1, 400){
+            color: $themeColor;
+            };
+            border: 1px solid $themeColor;
+            text-decoration: none;
+            margin-top: 25px;
+            padding: 10px;
+            font-weight: bold;
+            &:hover{
+                    color: $themeColor;
+                    cursor: pointer;
+            }
+            &:active{
+                    color: $themeColor;
+            }
+        }
+    }
+}
+.contact__logo{
+    display: flex;
+    flex-direction: column;
+    img{
+        margin-bottom: 75px;
+    }
+    .logo-wrapper{
+        display: flex;
+    }
+}
+.logo__column-one{
+    display: flex;
+    flex-direction: column;
+    margin-right: 30px;
+}
+.logo__column-two{
+    display: flex;
+    flex-direction: column;
+}
+/* Footer */
+.footer{
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    padding: 65px;
+    @include font(14px, 26px, 300){
+        color: #fff;
+    };
+    h5{
+        @include font(15px, 26px, 900);
+        margin-bottom: 35px;
+    }
+    &::after{
+        content: "";
+        display: block;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-image: linear-gradient(90deg, #09052f 0%, #311d5e 100%);
+        z-index: 0;
+        opacity: 0.8;
+    }
+}
+.footer > *{
+    z-index: 10;
+    position: relative;
+}
+.footer-wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+.footer__desc{
+    max-width: 290px;
+    .header__logo{
+        margin-bottom: 15px;
+        padding: 0;
+    }
+}
+.footer__adress{
+    max-width: 290px;
+    .footer__adress-wrapper{
+        display: flex;
+        i{
+            margin: 5px 20px 0 0;
+        }
+    }
+}
+.footer-contact{
+    form{
+        display: flex;
+        margin-bottom: 30px;
+        input[type=email]{
+            padding: 10px;
+            background-color: transparent;
+            border: 1px solid #fff;
+            opacity: 0.7;
+            color: #fff;
+            &::placeholder{
+                color: #fff;
+            }
+            &:focus{
+                outline-offset: unset;
+                outline: unset;
+            }
+        }
+        input[type=submit]{
+            background: url("../img/footer-btn.png") no-repeat;
+            background-position: center;
+            background-color: #fff;
+            opacity: 0.5;
+            cursor: pointer;
+            width: 75px;
+            margin-left: 10px;
+            border: none;
+        }
+    }
+    a{
+        text-decoration: none;
+    }
+    i{
+        font-size: 25px;
+        border: 1px solid #fff;
+        border-radius: 50%;
+        padding: 6px;
+        color: #fff;
+        &:not(:last-child){
+            margin-right: 10px;
+            
+        }
+        &:hover{
+            color: $themeColor;
+        }
+        &:active{
+            color: $themeColor;
+        }
+    }
+}
+.footer__copyright-wrapper{
+    display: flex;
+    justify-content: space-between;
+    p{
+        margin: 30px 30px 0 0; 
+        &:last-child{
+            margin-right: 0;
+        }
+     }
+    a{
+        text-decoration: none;
+        color: #fff;
+        &:hover{
+            color: $themeColor;
+        }
+        &:active{
+            color: $themeColor;
+        }
+    }
+    .footer-link{
+        display: flex;
+    }
+    
+}
