--- a/Landing_3/scss/media.scss
+++ b/Landing_3/scss/media.scss
@@ -24,13 +24,15 @@
         
     }
     .nav-mob{
-        display: none;
+       display: none; 
     }
     .nav-mob.active{
-        display: inline-flex;
-        border-top: 1px solid rgba(255, 255, 255, 0.1);
+        display: flex;
+        position: absolute;
+        top: 75px;
         width: 100%;
         justify-content: center;
+        background: black;
         
     }
     .header-button{
@@ -45,14 +47,141 @@
         display: block;
     }
     section{
-        margin: 40px 0;
+        margin: 20px 0;
     }
+   /* Header */
+   .header{
+       height: 40vh;
+       padding: 20px 0;
+   }
+   .header__logo{
+       p{
+           font-size: 14px;
+       }
+   }
+   .intro{
+       height: auto;
+       font-size: 14px;
+       h1{
+           font-size: 18px;
+       }
+       .link-button{
+           margin: 0;
+       }
+   }
+    .intro-buttons{
+        margin: 25px auto;
+    }
+    /* Our Story */
+    .story-wrapper{
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        img{
+            margin: 0 0 0 0 !important;
+        }
+    }
+    /* Expertise */
+    .expertise-wrapper{
+        flex-direction: column;
+    }
+    .expertise-case{
+        width: 100%;
+    }
+    /* Team */
+    .team{
+        flex-direction: column;
+    }
+    .main-title{
+        &:after{
+            top: 6% !important;
+        }
+    }
+    .team-wrapper{
+        margin-bottom: 30px;
+        justify-content: center;
+        .team-member{
+            margin: 0 0 15px 0 !important;
+        }
+    }
+    /* Works */
+    .works{
+        padding: 0;
+        .works-wrapper{
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+    /*Employee*/
+    .employee{
+        img{
+            width: auto;
+        }
+    }
+    /* Testimonials */
+    .testimonials{
+        h3{
+            font-size: 60px;
+        }
+        p{
+            margin-bottom: 20px;
+        }
+        .testimonials-wrapper{
+            img{
+                width: 35px;
+            }
+            i{
+                top: 3px;
+            }
+        }
+    }
+    /* Contact */
+    .contact{
+        padding: 0;
 
+    }
+    .contact-wrapper{
+        flex-direction: column;
+    }
+    .contact__form{
+        margin: 0 0 40px 0;
+        width: 79vw;
+    }
+    .contact__logo{
+        img{
+            margin-bottom: 20px;
+        }
+        .logo-wrapper{
+            justify-content:  center;
+        }
+    }
+    .logo__column-one{
+        margin-right: 55px;
+    }
+    /*Footer*/
+    .footer{
+        padding: 15px;
+        h5{
+            margin-bottom: 15px;
+        }
+    }
+    .footer-wrapper{
+        flex-direction: column;
+        margin-bottom: 25px;
+        .footer__desc{
+            margin-bottom: 15px;
+            max-width: 590px;
+        }
+        .footer__adress{
+            margin-bottom: 15px;
+            max-width: 590px;
+        }
+    }
 }
 /* Extra small devices (phones, 575px and down) */
 @media (max-width: 575px) {
     section{
-        margin: 40px 0;
+        margin: 20px 0;
     }
    /* Header */
    .header{
@@ -86,5 +215,127 @@
             height: 270px !important;
             margin: 0 0 30px 0 !important;
         }
+    }
+    /* Expertise */
+    .expertise-wrapper{
+        flex-direction: column;
+    }
+    .expertise-case{
+        width: 100%;
+    }
+    /* Team */
+    .team{
+        flex-direction: column;
+    }
+    .main-title{
+        &:after{
+            top: 6% !important;
+        }
+    }
+    .team-wrapper{
+        margin-bottom: 30px;
+        justify-content: center;
+        .team-member{
+            margin: 0 0 15px 0 !important;
+        }
+    }
+    /* Works */
+    .works{
+        padding: 0;
+        .works-wrapper{
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+    /*Employee*/
+    .employee{
+        display: flex;
+        justify-content: center;
+        img{
+            width: auto;
+        }
+    }
+    /* Testimonials */
+    .testimonials{
+        h3{
+            font-size: 60px;
+        }
+        p{
+            margin-bottom: 20px;
+        }
+        .testimonials-wrapper{
+            img{
+                width: 35px;
+            }
+            i{
+                top: 3px;
+            }
+        }
+    }
+    /* Contact */
+    .contact{
+        padding: 0;
+
+    }
+    .contact-wrapper{
+        flex-direction: column;
+    }
+    .contact__form{
+        margin: 0 0 40px 0;
+        form{
+            font-size: 14px;
+            input[type=text], input[type=email]{
+                padding: 5px;
+                margin-bottom: 15px;
+            }
+            textarea{
+                height: 60px;
+                &::placeholder{
+                    padding: 5px;
+                    opacity: 0.5;  
+                }
+            }
+        }
+    }
+    .contact__logo{
+        img{
+            margin-bottom: 20px;
+        }
+        .logo-wrapper{
+            justify-content: space-between;
+        }
+    }
+    .logo__column-one{
+        margin-right: 15px;
+        width: 40vw;
+    }
+    .logo__column-two{
+        width: 40vw;
+    }
+    /*Footer*/
+    .footer{
+        padding: 15px;
+        h5{
+            margin-bottom: 15px;
+        }
+    }
+    .footer-wrapper{
+        flex-direction: column;
+        margin-bottom: 25px;
+        .footer__desc{
+            margin-bottom: 15px;
+        }
+        .footer__adress{
+            margin-bottom: 15px;
+        }
+    }
+    .footer__copyright-wrapper{
+        flex-direction: column;
+        p{
+            margin: auto;
+        }
+    }
+    .footer-trademark{
+       margin: auto; 
     }
 }
