--- a/Landing_3/scss/styles.scss
+++ b/Landing_3/scss/styles.scss
@@ -58,7 +58,23 @@ section{
     z-index: 10;
     position: relative;
 }
-
+/* Fixed */
+.header-wrapper.fixed{
+    background-color:#1b1e25;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10000;
+    transform: translate3d(0, 0, 0);
+  }
+  .header-wrapper.active{
+    background-color:#1b1e25;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10000;
+  }
 .header-wrapper{
     display: flex;
     justify-content: space-between;
@@ -94,6 +110,65 @@ nav{
         }
     }
 }
+/* Nav toggle */
+.nav-toggle{
+    width: 30px;
+    padding: 15px 0;
+    position: absolute;
+    top: 7px;
+    right: 15px;
+    z-index: 1;
+    font-size: 0px;
+    color: transparent;
+    border: 0;
+    background: none;
+    cursor: pointer;
+    display: none;
+  
+  }
+  .nav-toggle.active .nav-toggle__item{
+    background: none;
+  }
+  .nav-toggle.active .nav-toggle__item::before{
+    transform-origin: left top;
+    transform: rotate(45deg) translateX(1px)
+    translateY(-5px);;
+  }
+  .nav-toggle.active .nav-toggle__item::after{
+    transform-origin: left bottom;
+    transform: rotate(-45deg)translateX(2px)
+    translateY(4px);
+  }
+  .nav-toggle__item{
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: $themeColor;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    
+  }
+  .nav-toggle__item:before,
+  .nav-toggle__item:after{
+    content: "";
+    width: 100%;
+    height: 3px;
+    background-color: $themeColor;
+    position: absolute;
+    left: 0;
+    z-index: 1;
+  }
+  .nav-toggle__item:before{
+    top: -8px;
+  }
+  .nav-toggle__item:after{
+    top: 8px;
+  }
+
 /* Intro */
 .intro{
     max-width: 685px;
@@ -470,7 +545,6 @@ nav{
 .contact__form{
     display: flex;
     flex-direction: column;
-    
     margin-right: 40px;
     form{
         display: flex;
@@ -489,9 +563,6 @@ nav{
         textarea{
             &::placeholder{
                 padding: 15px;
-                @include font(22px, 1, 300){
-                    color: #413d4b;
-                };
                 opacity: 0.5;  
             }
         }
