--- a/Landing_4/css/footer.css
+++ b/Landing_4/css/footer.css
@@ -1,6 +1,5 @@
 .footer {
-  margin-bottom: 0;
-  padding-bottom: 0;
+  padding: 30px 0 0 0;
 }
 
 .footer-map iframe {
@@ -18,6 +17,12 @@
       -ms-flex-align: center;
           align-items: center;
   padding: 3% 0;
+}
+
+@media (max-width: 480px) {
+  .footer__inner-wrap {
+    display: block;
+  }
 }
 
 .footer__inner-info-wrap {
@@ -38,6 +43,12 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+@media (max-width: 480px) {
+  .footer__inner-info-text-wrap {
+    display: block;
+  }
 }
 
 .footer__inner-info-text-contact {
@@ -64,6 +75,12 @@
   margin: 0 5% 0 0;
 }
 
+@media (max-width: 480px) {
+  .footer__inner-social-wrap {
+    margin: 10% 0;
+  }
+}
+
 .footer__nav {
   background-color: #8f2b50;
 }
@@ -74,10 +91,17 @@
   display: flex;
   list-style: none;
   padding: 2% 2% 2% 15px;
+  margin: 0;
 }
 
 .footer__nav ul li:not(:last-child) {
   margin: 0 2% 0 0;
+}
+
+@media (max-width: 480px) {
+  .footer__nav ul li:not(:last-child) {
+    margin: 0 0 5% 0;
+  }
 }
 
 .footer__nav ul a {
@@ -88,6 +112,14 @@
 .footer__nav ul a:hover {
   text-decoration: underline;
   color: #ffffff;
+}
+
+@media (max-width: 480px) {
+  .footer__nav ul {
+    display: block;
+    text-align: center;
+    padding: 2%;
+  }
 }
 
 .footer h5 {
@@ -110,6 +142,18 @@
   margin: 0 2% 0 0;
 }
 
+@media (max-width: 480px) {
+  .footer__inner-info {
+    width: 100%;
+  }
+  .footer__inner-info .footer__inner-info-img {
+    margin: 0 5% 0 0;
+  }
+  .footer__inner-info .footer__inner-info-img img {
+    width: 100%;
+  }
+}
+
 .footer__inner-info p {
   margin: 0 0 3% 0;
 }
@@ -121,6 +165,12 @@
   margin: 0 2% 0 0;
 }
 
+@media (max-width: 480px) {
+  .footer__inner-social {
+    width: 100%;
+  }
+}
+
 .footer__inner-social::before {
   content: '';
   position: absolute;
@@ -128,6 +178,15 @@
   height: 100%;
   left: 0;
   top: 25%;
+}
+
+@media (max-width: 480px) {
+  .footer__inner-social::before {
+    border-right: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.5);
+    width: 50%;
+    left: 25%;
+  }
 }
 
 .footer__inner-social::after {
@@ -139,6 +198,15 @@
   top: 25%;
 }
 
+@media (max-width: 480px) {
+  .footer__inner-social::after {
+    border-right: 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+    width: 50%;
+    right: 25%;
+  }
+}
+
 .footer__inner-social h5 {
   margin-right: 13%;
 }
@@ -146,5 +214,12 @@
 .footer__inner-moto {
   width: 35%;
   margin: 0 2% 0 0;
+}
+
+@media (max-width: 480px) {
+  .footer__inner-moto {
+    width: 100%;
+    text-align: center;
+  }
 }
 /*# sourceMappingURL=footer.css.map */
