--- a/Landing_4/css/header.css
+++ b/Landing_4/css/header.css
@@ -1,5 +1,5 @@
 .header {
-  margin: 0;
+  padding: 30px 0;
   text-transform: uppercase;
   background-color: #8f2b50;
   color: #ffffff;
@@ -15,8 +15,26 @@
   margin: 0 10% 0 0;
 }
 
+@media (max-width: 768px) {
+  .header__logo img {
+    width: 70%;
+  }
+}
+
+@media (max-width: 480px) {
+  .header__logo img {
+    width: 60%;
+  }
+}
+
 .header-menu-wrap {
   width: 100%;
+}
+
+@media (max-width: 768px) {
+  .header-menu-wrap {
+    display: none;
+  }
 }
 
 .header__info {
@@ -80,6 +98,7 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding: 0;
 }
 
 .header__nav ul li:not(:last-child) {
@@ -90,7 +109,107 @@
   content: '';
   position: absolute;
   border-bottom: 1px solid #ffffff;
-  bottom: -15px;
+  bottom: -10px;
   width: 100%;
+}
+
+/* Mobile */
+@media (min-width: 768px) {
+  .burger-menu {
+    display: none;
+  }
+}
+
+.burger-menu__button {
+  position: absolute;
+  top: 25px;
+  right: 10px;
+  z-index: 30;
+  width: 80px;
+  height: 80px;
+}
+
+.burger-menu__button:hover .burger-menu__lines {
+  -webkit-filter: brightness(0.7);
+          filter: brightness(0.7);
+}
+
+.burger-menu__lines,
+.burger-menu__lines:after,
+.burger-menu__lines:before {
+  position: absolute;
+  width: 40px;
+  height: 6px;
+  background-color: #ffffff;
+}
+
+.burger-menu__lines {
+  top: 42%;
+  left: 0%;
+  -webkit-transform: translate(50%, 50%);
+          transform: translate(50%, 50%);
+}
+
+.burger-menu__lines::before {
+  content: '';
+  top: -12px;
+}
+
+.burger-menu__lines::after {
+  content: '';
+  bottom: -12px;
+}
+
+.burger-menu_active .burger-menu__lines {
+  background-color: transparent;
+}
+
+.burger-menu_active .burger-menu__lines::before {
+  top: 0;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.burger-menu_active .burger-menu__lines::after {
+  top: 0;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.burger-menu__nav {
+  position: absolute;
+  width: 100%;
+  left: -100%;
+  background-color: #8f2b50;
+  z-index: 20;
+  padding: 5% 2%;
+}
+
+.burger-menu__nav a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.burger-menu__nav a:hover {
+  text-decoration: underline;
+  color: #fff;
+}
+
+.burger-menu__nav ul {
+  padding: 2% 0;
+  list-style: none;
+}
+
+.burger-menu__nav ul li {
+  margin: 2% 0;
+}
+
+.burger-menu__nav .header__info-address,
+.burger-menu__nav .header__info-tel {
+  margin: 0 0 2% 0;
+}
+
+.burger-menu_active .burger-menu__nav {
+  left: 0;
 }
 /*# sourceMappingURL=header.css.map */
