--- a/Landing_4/css/konzept.css
+++ b/Landing_4/css/konzept.css
@@ -7,8 +7,20 @@
           justify-content: space-between;
 }
 
+@media (max-width: 480px) {
+  .konzept-wrap {
+    display: block;
+  }
+}
+
 .konzept .description-title-konzept {
   width: 50%;
+}
+
+@media (max-width: 480px) {
+  .konzept .description-title-konzept {
+    width: auto;
+  }
 }
 
 .konzept .description-title-konzept h3 {
@@ -18,5 +30,11 @@
 .konzept .description-title-konzept p {
   margin: 0 0 2% 0;
   text-align: justify;
+}
+
+@media (max-width: 480px) {
+  .konzept-img img {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=konzept.css.map */
