--- a/Landing_4/css/languages.css
+++ b/Landing_4/css/languages.css
@@ -22,6 +22,13 @@
   margin: 0 2% 0 0;
 }
 
+@media (max-width: 480px) {
+  .lang__item {
+    display: block;
+    text-align: center;
+  }
+}
+
 .lang__item-flag {
   position: relative;
   padding: 12%;
@@ -36,8 +43,23 @@
   height: 25%;
 }
 
+@media (max-width: 480px) {
+  .lang__item-flag::after {
+    border-right: 0;
+    border-bottom: 1px solid #666666;
+    bottom: 0;
+    right: 22px;
+  }
+}
+
 .lang__item-name {
   padding: 13% 0% 0% 10%;
+}
+
+@media (max-width: 480px) {
+  .lang__item-name {
+    padding: 5%;
+  }
 }
 
 .lang__main-wrap {
@@ -46,10 +68,23 @@
   display: flex;
 }
 
+@media (max-width: 480px) {
+  .lang__main-wrap {
+    display: block;
+  }
+}
+
 .lang__item-main {
   width: 75%;
   background-color: #fff;
   margin: 0 2% 0 0;
+}
+
+@media (max-width: 480px) {
+  .lang__item-main {
+    width: auto;
+    margin: 0 0 2% 0;
+  }
 }
 
 .lang__item-main i {
@@ -70,6 +105,13 @@
   width: 14%;
 }
 
+@media (max-width: 480px) {
+  .lang__item-main-country {
+    width: 50%;
+    text-align: center;
+  }
+}
+
 .lang__item-main-wrap {
   padding: 2%;
 }
@@ -88,12 +130,36 @@
           flex-direction: column;
 }
 
+@media (max-width: 480px) {
+  .lang-wrap-wrap {
+    -webkit-box-orient: initial;
+    -webkit-box-direction: initial;
+        -ms-flex-direction: initial;
+            flex-direction: initial;
+  }
+}
+
 .lang-wrap-wrap .lang__item {
   width: 20vw;
 }
 
 .lang-wrap-wrap .lang__item:not(:last-child) {
   margin: 0 0 9% 0;
+}
+
+@media (max-width: 480px) {
+  .lang-wrap-wrap .lang__item:not(:last-child) {
+    margin: 0 2% 0 0;
+  }
+  .lang-wrap-wrap .lang__item:not(:last-child) .lang__item-flag::after {
+    width: 75%;
+  }
+}
+
+@media (max-width: 480px) {
+  .lang-wrap-wrap .lang__item {
+    width: 48%;
+  }
 }
 
 .lang-wrap-wrap .lang__item i {
