--- a/Landing_4/css/testimonial.css
+++ b/Landing_4/css/testimonial.css
@@ -7,6 +7,12 @@
           justify-content: space-between;
 }
 
+@media (max-width: 480px) {
+  .testimonial-wrap {
+    display: block;
+  }
+}
+
 .testimonial__inner {
   background-image: url(img/testimonial_bg.png);
   background-position: 100% 0;
@@ -17,6 +23,13 @@
   padding: 4%;
   text-align: justify;
   position: relative;
+}
+
+@media (max-width: 480px) {
+  .testimonial__inner {
+    width: 100%;
+    margin: 0 0 5% 0;
+  }
 }
 
 .testimonial__inner h3 {
@@ -53,5 +66,18 @@
   border-right: 1px solid #fff;
   top: 30%;
   height: 20px;
+}
+
+@media (max-width: 480px) {
+  .testimonial__inner .btn {
+    height: 44px;
+  }
+}
+
+@media (max-width: 375px) {
+  .testimonial__inner .btn {
+    width: 48px;
+    height: 34px;
+  }
 }
 /*# sourceMappingURL=testimonial.css.map */
